--- a/overlay/OPlusSystemUIResTarget/res/values/config.xml
+++ b/overlay/OPlusSystemUIResTarget/res/values/config.xml
@@ -17,4 +17,6 @@
     <!-- Charging info current divider, if needed -->
     <integer name="config_currentInfoDivider" translatable="false">1</integer>
 
+    <!-- Whether to find optimal display refresh rate when using udfps -->
+    <bool name="config_udfpsOptimalRefreshRate">true</bool>
 </resources>
