spartan: overlay: pulse On Finger Down

--- a/overlay/OPlusSystemUIResTarget/res/values/config.xml
+++ b/overlay/OPlusSystemUIResTarget/res/values/config.xml
@@ -19,4 +19,8 @@
 
     <!-- Whether to find optimal display refresh rate when using udfps -->
     <bool name="config_udfpsOptimalRefreshRate">true</bool>
+
+    <!-- Whether to pulse onFingerDown actions instead
+        of waking the screen while the screen is off or in lpm. -->
+    <bool name="config_pulseOnFingerDown">true</bool>
 </resources>
