--- a/overlay/FrameworksResTarget/res/values/config.xml
+++ b/overlay/FrameworksResTarget/res/values/config.xml
@@ -85,7 +85,7 @@
     <bool name="config_enableBurnInProtection">true</bool>
      
     <!-- Doze: should the TYPE_PICK_UP_GESTURE sensor be used as a pulse signal. -->
-    <bool name="config_dozePulsePickup">true</bool>
+    <bool name="config_dozePulsePickup">false</bool>
 
     <!-- Whether the device supports Smart Pixels -->
     <bool name="config_supportSmartPixels">true</bool>
