--- a/overlay/OPlusFrameworksResTarget/res/values/config.xml
+++ b/overlay/OPlusFrameworksResTarget/res/values/config.xml
@@ -530,4 +530,16 @@
         <item>104</item>   <!-- <item>sensorRadius</item> -->
     </integer-array>
 
+    <!-- Paths to the libraries that contain device specific key handlers -->
+    <string-array name="config_deviceKeyHandlerLibs" translatable="false">
+      <item>/system_ext/app/KeyHandler/KeyHandler.apk</item>
+      <item>/system_ext/priv-app/TouchGestures/TouchGestures.apk</item>
+    </string-array>
+
+    <!-- Names of the key handler classes -->
+    <string-array name="config_deviceKeyHandlerClasses" translatable="false">
+      <item>org.lineageos.settings.device.KeyHandler</item>
+      <item>com.android.touch.gestures.KeyHandler</item>
+    </string-array>
+
 </resources>
